This fixes an issue with those calendars on mobile.

--- a/am/static-components/sass/_heatmaps.scss
+++ b/am/static-components/sass/_heatmaps.scss
@@ -22,6 +22,7 @@ div.calendar-heatmap{
       margin-bottom: 5px;
     }
     width: 100px;
+    height: 100px;
     float: left;
     margin-bottom: 1em;
   }
